# coherence

./: .gitignore  Cargo.toml  DESIGN.md  PATCH_FORMAT.md  README.md  TODO.md  example.chrpatch  f  proto.py  t.diff  test.chrpatch
.github/workflows/: build.yml  lint.yml
coherence/: LICENSE  README.md  example.chrpatch
coherence-backend-bzr/: Cargo.toml  README.md
coherence-backend-git/: Cargo.toml  README.md
coherence-backend-hg/: Cargo.toml  README.md
coherence-backend-jj/: Cargo.toml  README.md
coherence-backend-native/: Cargo.toml  README.md
coherence-backend-sl/: Cargo.toml  README.md
coherence-backend-traits/: Cargo.toml  README.md
coherence-patch/: Cargo.toml
coherence/src/: ast.rs  cli.rs  utils.rs
coherence/src/patch/: chrpatch.pest  constructor.rs  parser.rs  serializer.rs
src/: ast.rs  change_controller.rs  cli.rs  macros.rs  main.rs  utils.rs
src/chrpatch/: chrpatch.pest  constructor.rs  mod.rs  parser.rs  patcher.rs  serializer.rs
src/commands/: init.rs  mod.rs  parse.rs
src/patch/: chrpatch.pest  constructor.rs  mod.rs  serializer.rs
