[package]
name = "coherence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
pest = "2.5.7"
pest_derive = "2.5.7"
time = { version = "0.3.20", features = ["macros"] }
