[package]
name = "coherence"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Minimalictic VCS based on custom patch format, aimed at predictability"
homepage = "https://itsaleph.github.io/coherence/"
documentation = "https://docs.rs/coherence/"
repository = "https://github.com/ItsAleph/coherence"
readme = "README.md"
keywords = ["vcs"]
categories = ["development-tools", "command-line-utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
pest = "2.5.7"
pest_derive = "2.5.7"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.163"
serde_derive = "1.0.163"
time = { version = "0.3.20", features = ["macros", "parsing"] }
toml = "0.7.3"

[build-dependencies]
built = "0.6.0"
